For compatibility, execCommand should support deprecated 'useCSS' alias for 'styleWithCSS' https://bugs.webkit.org/show_bug.cgi?id=36683

Patch by Kiyoto Tamura <owenestea@gmail.com> on 2011-09-13
Reviewed by Ryosuke Niwa.

Source/WebCore:

In addition to supporting the deprecated 'useCSS', 'styleWithCSS' now accepts any argument other than
the boolean false or the case-insensitive string "false". This is per
http://aryeh.name/spec/editing/editing.html#the-stylewithcss-command

Tests: editing/execCommand/style-with-css.html
       editing/execCommand/use-css.html

* editing/EditorCommand.cpp:
(WebCore::executeStyleWithCSS):
(WebCore::executeUseCSS):
(WebCore::createCommandMap):

LayoutTests:

Testing useCSS, the command previously unsupported by WebKit. Also, we are testing
styleWithCSS accepts anything that is not the boolean false or the string "false" as true.
Furthermore, we test that queryCommandValue/State('useCSS') return boolean false and
queryCommandValue/State('useStyleWithCSS') returns booleans (as opposed to 'true'/'false'
strings)

* editing/execCommand/style-with-css-expected.txt: Added.
* editing/execCommand/style-with-css.html: Added.
* editing/execCommand/use-css-expected.txt: Added.
* editing/execCommand/use-css.html: Added.

Canonical link: https://commits.webkit.org/83933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95050 268f45cc-cd09-0410-ab3c-d52691b4dbfc